query-builder/src/snapshots/surrealdb_macros__query_define_table__tests__define_for_statement_state_machine-2.snap
---
source: surreal-macros/src/query_define_table.rs
expression: for_res.get_bindings()
---
[
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Oyelowo",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'Oyelowo'",
        description: None,
    },
]
